# rcaai_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/graspnet_bringup/share/graspnet_bringup/: package.bash  package.zsh
install/graspnet_control/lib/graspnet_control/: grasp_planner  robot_controller
install/graspnet_control/share/graspnet_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/graspnet_description/share/graspnet_description/: package.bash  package.zsh
install/graspnet_gazebo/share/graspnet_gazebo/: package.bash  package.zsh
install/graspnet_hardware/share/graspnet_hardware/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/graspnet_moveit/share/ament_index/resource_index/package_run_dependencies/: graspnet_moveit
install/graspnet_moveit/share/graspnet_moveit/: local_setup.dsv  package.xml
install/graspnet_moveit/share/graspnet_moveit/cmake/: graspnet_moveitConfig.cmake
install/graspnet_perception/lib/graspnet_perception/: camera_manager  object_detector
install/graspnet_perception/share/graspnet_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: clone_repos.sh
src/graspnet_gazebo/: CMakeLists.txt
src/graspnet_gazebo/launch/: gazebo.launch.py
src/graspnet_gazebo/worlds/: graspnet_world.world
src/sim_stack/: CMakeLists.txt  package.xml
